# robot-physicist

./: README.md  gamma-gamma-analysis-v1.py  plotly_higgs_analysis.py  requirements.txt
plots/: histogram_data_A.GamGam_cut10000.0_E105.0-160.0.root  index.html
robot-physicist-website/: _quarto.yml  about.qmd  contact.qmd  divulgacion.qmd  index.qmd  main.py  pyproject.toml  styles.css
robot-physicist-website/charts/marimotest/: index.qmd
robot-physicist-website/histogramas/: index.qmd
robot-physicist-website/histogramas/atlas-dataset-A/: index.qmd
robot-physicist-website/histogramas/atlas-dataset-B/: index.qmd
robot-physicist-website/histogramas/atlas-dataset-C/: index.qmd
robot-physicist-website/histogramas/atlas-dataset-D/: index.qmd
robot-physicist-website/histogramas/atlas-test-analysis/: index.qmd
robot-physicist-website/histogramas/plots/: index.html
robot-physicist-website/site/: about.html  index.html  listings.json  search.json  styles.css
robot-physicist-website/site/charts/: index.html
robot-physicist-website/site/charts/marimotest/: index.html
robot-physicist-website/site/charts/marimotest copy/: index.html
robot-physicist-website/site/histogramas/: index.html
robot-physicist-website/site/histogramas/atlas-dataset-A/: index.html
robot-physicist-website/site/histogramas/atlas-dataset-B/: index.html
robot-physicist-website/site/histogramas/atlas-dataset-C/: index.html
robot-physicist-website/site/histogramas/atlas-dataset-D/: index.html
robot-physicist-website/site/histogramas/atlas-test-analysis/: index.html
(+5 files in other folders)
